style.css
body {
  font-family: 'Rubik', sans-serif;
}

.grid {
  display: grid;
  width: 100vw;
  height: 100vh;
  grid-template-rows: 110px 650px 650px 100px;
  /*grid-template-columns: .25fr .25fr .25fr .25fr;*/
  grid-template-columns: repeat(4, 25vw);
}

.grid-project-hashtravel {
  height: 100vh;
  display: grid;
  grid-template-rows: 110px 850px 1830px 650px 530px 1150px 1350px 1500px 950px 120px;
  grid-template-columns: 1fr;
    /*font-size: 1em;*/
}

.grid-project-infoshop {
  height: 100vh;
  display: grid;
  grid-template-rows: 110px 850px 450px 1950px 400px 1550px 250px 950px 1900px 2650px 120px;
  grid-template-columns: 1fr;
}

.grid-project-blick {
  height: 100vh;
  display: grid;
  grid-template-rows: 110px 850px 1350px 650px 530px 920px 1350px 1720px 950px 120px;
  grid-template-columns: 1fr;
  font-size: .8em;
}

.stripe {
  /*border-bottom: 20px solid #367960;*/
  background: #efe;
  grid-column-start: 1;
  grid-column-end: 5;
  display: inline;
  font-size: 2em;
  /*text-align: right;*/
  /*text-decoration: none;*/
}

a:visited, a:link {
  text-decoration: none;
  color: #333;
}

.content1 {
  background-color: orange;
  /*border-right: 3px solid #F78018;*/
  /*border: 9px solid #DA9473;*/
  grid-column-start: 1;
  grid-column-end: span 1;
  font-size: 1.8em;
  color: #fff;
  letter-spacing: 7px;
  padding: 0px 0 0 10px;
}

#smalltext {
  font-size: 15px;
  letter-spacing: 2px;
}

.content2 {
  /*border-left: 3px solid #eee;*/
  background-color: #FAE597;
  grid-column-start: 2;
  grid-column-end: span 1;
  /*padding: 30px 15px 0 55px;*/
}

.content2 h3, .content5 h3, .content7 h3 {
  text-align: right;
  font-size: 1.5em;
  /*color: #eee;*/
}

.content3 {
  /*border: 2px solid #ffcf23;*/
  background-color: #fff;
  grid-column-start: 3;
  grid-column-end: span 1;
}

.content4 {
  /*border: 4px solid white;*/
  background-color: #389E77;
  grid-column-start: 4;
  grid-column-end: span 1;
}

.content5 {
  background-color: #365193;
  grid-column-start: 1;
  grid-column-end: span 1;
}

.content6 {
  background-color: #fff;
  grid-column-start: 2;
  grid-column-end: span 1;
}

.content7 {
  background-color: antiquewhite;
  grid-column-start: 3;
  grid-column-end: span 1;
}

.content8 {
  /*background-color: #fff;*/
  grid-column-start: 4;
  grid-column-end: span 1;
}

#namespan {
  padding-left: 20px;
}

#titlespan {
  float: right;
  padding-right: 40px;
  color: #365193;
  font-size: .8em;
}

.hash, .infoshop, .blick {
  /*display: inline-block;*/
  /*flex-direction: column;*/
  /*justify-content: center;*/
  /*padding: 24px 10px 0px 35px;*/
}

.hash {
  padding: 25px 10px 0px 35px;
}

.infoshop {
  padding: 65px 0px 0px 20px;
}

.blick {
  padding: 55px 0px 0px 16px;

}


.project {
 font-family: 'Merriweather Sans', sans-serif;
}

.content1-hash {
  background-color: #fff;
  color: #222;
  text-align: center;
  padding: 35px 0 0 0;
  grid-column-start: 1;
  grid-column-end: span 1;
}

.content1-infoshop {
  background-color: #fff;
  color: #222;
  text-align: center;
  padding: 35px 0 0 0;
  grid-column-start: 1;
  grid-column-end: span 1;
}

.content2-hash {
  background-color: #fff;
  color: #222;
  text-align: center;
  padding: 25px 30px 20px 30px;
  grid-column-start: 1;
  grid-column-end: span 1;
}

.content2-infoshop {
  background-color: #E2F9F8;
  color: #222;
  text-align: center;
  padding: 25px 30px 20px 30px;
  grid-column-start: 1;
  grid-column-end: span 1;
}

.content3-hash {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #efe;
  padding: 55px 160px 0 70px;
  display: inline-block;
}

.content3-infoshop {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #efe;
  padding: 120px 160px 0 160px;
  display: inline-block;
}

.content3-hash img {
  float: left;
  padding: 0 100px 0 15px;
}

.content4-hash {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #fff;
  padding: 85px 160px 0 70px;
  /*display: inline-block;*/
}

.content4-infoshop {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #fff;
  padding: 85px 100px 0 100px;
  /*display: inline-block;*/
}


.content4-blick {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  font-size: 1em;
  background-color: #FAE597;
  padding: 85px 70px 0 70px;
  /*display:flex;*/
  /*justify-content: flex-start;*/
  /*float: left;*/
}

.content4-hash img, .content3-blick img {
  float: left;
  padding: 40px 90px 0 15px;
}

.centerimage {
  padding: 65px 0 30px 0;
}

.content5-hash {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #fff;
  padding: 35px 10px 0 30px;
}

.content6-hash {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  padding: 75px 70px 70px 30px;
  background-color: #48758A;
  color: #fff;
}

.content6-blick {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  padding: 0px 70px 10px 30px;
  background-color: #fff;
  color: #222;
}

.content6-infoshop {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  padding: 0px 50px 10px 50px;
  background-color: #FAE597;
  color: #222;
}

.content7-hash {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #fff;
  padding: 75px 70px 70px 30px;
}

.content7-blick {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #F2F2F2;
  padding: 30px 70px 20px 30px;
}

.content7-infoshop {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #fff;
  padding: 30px 70px 20px 30px;
}

.content8-hash {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #EFE;
  padding: 35px 30px 0 30px;
}
/* ... */

